--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -34,3 +34,9 @@
   display: block;
   margin: -1rem 0 2rem;
 }
+
+.align-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
